# qa_guru_python_1_15

with_poetry_homework/: pyproject.toml
with_poetry_homework/tests/: test_with_poetry_homework.py
