[tool.poetry]
name = "with_poetry_homework"
version = "0.1.0"
description = ""
authors = ["Olga Demina <miserylab.r6s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0b5"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
